# hobolib

./: Cargo.toml
src/: automation.rs  clipboard.rs  glob.rs  keyboard.rs  lib.rs  log.rs  macros.rs  misc.rs  mouse.rs  screenshot.rs  window.rs
src/keyboard/: keyboard_backend.rs
src/misc/: message_box.rs  panic_hook.rs  taskbar.rs  toml_interface.rs
src/mouse/: bezier.rs
src/opencv/: opencv_backend.rs
src/screenshot/: capture_backend.rs  image_grid.rs  test_screenshot_test.rs
src/window/: test_window_test.rs  window_backend.rs
